k8s/https/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: rage.swipelab.co
    http:
      paths:
      - path: /?(.*)
        backend:        
          serviceName: ghost-cluster-ip-service
          servicePort: http        
  tls:
  - hosts:
    - rage.swipelab.co
    secretName: rage-swipelab-co
